Replace Guava with standard Java where easily possible